# signature

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  signature_app_spec.md
.github/workflows/: deploy-forwarder.yml
signclip/: __main__.py  app.py  autostart.py  canvas.py  clipboard.py  editor_window.py  hotkey.py  icon.py  manager_window.py  paths.py  settings.py  settings_window.py  storage.py  strings.py  tray.py
telegram-discord-forwarder/: .env.example  .gitattributes  .gitignore  README.md  forwarder.py  requirements.txt  run_command.txt  telegram-forwarder.service
telegram-discord-forwarder/.cicd/: README.md  build-env.sh  deploy.sh  health-check.sh
telegram-discord-forwarder/.github/workflows/: deploy-forwarder.yml
tests/: conftest.py  test_canvas.py  test_clipboard.py  test_storage.py
