[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signclip"
version = "1.0.0"
description = "Local-only signature clipboard app. Draw once, paste anywhere with a hotkey."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SignClip" }]
dependencies = [
    "PySide6>=6.6",
    "pynput>=1.7",
    "cryptography>=42",
    "keyring>=24",
    "loguru>=0.7",
]

[project.scripts]
signclip = "signclip.__main__:main"

[tool.setuptools.packages.find]
include = ["signclip*"]

[tool.setuptools.package-data]
signclip = ["assets/*"]

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
